other/block-stale-images/.chainsaw-test/podcontrollers-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeployment01
  namespace: block-staleimg-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: kyverno
        image: ghcr.io/kyverno/kyverno:latest
      - name: kyverno02
        image: ghcr.io/kyverno/kyverno:latest
