other/block-stale-images/.chainsaw-test/pods-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  namespace: block-staleimg-ns
spec:
  containers:
  - name: kyverno 
    image: ghcr.io/kyverno/kyverno:latest
  - name: kyverno02
    image: ghcr.io/kyverno/kyverno:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
  namespace: block-staleimg-ns
spec:
  containers:
  - name: kyverno
    image: ghcr.io/kyverno/kyverno:latest
